OAKHILL/src/objects/SL_LoopParameters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Checkbox_API_Name__c</fullName>
        <label>Checkbox API Name</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DDPId__c</fullName>
        <label>DDPId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryOptionId__c</fullName>
        <label>DeliveryOptionId</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Document_Queue_Delivery_Option_Id__c</fullName>
        <label>Document Queue Delivery Option Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Developer_Name__c</fullName>
        <label>Record Type Developer Name</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SL_LoopParameters</label>
</CustomObject>